[FIX](CSS) Fix a bug for footer position in small screen
This commit fixes a css bug causing that in small screens (13" laptops) the footer was overlapping with the page content.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,7 +13,8 @@ textarea{
 }
 
 footer{
-    position: absolute;
+    margin-top: 24px;
+    position: relative;
     bottom: 0;
     background: rgb(28,45,65);
     background: -moz-linear-gradient(180deg, rgba(28,45,65,1) 0%, rgba(35,52,72,1) 100%);
